# adminxperience

./: LICENSE  db.sqlite3  todo.txt
adminxperience/: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.rst  apps.py  compat.py  context_processors.py  pyproject.toml  requirements-test.txt  settings.py  setup.cfg  urls.py
adminxperience/docs/: contributing.rst  customization.rst  testing.rst
adminxperience/templates/admin/: base.html  base_site.html
docs/: conf.py  configuration.rst  quickstart.rst
docs/_build/doctrees/: configuration.doctree  contributing.doctree  customization.doctree  description.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree  testing.doctree  usage.doctree
docs/_build/html/: .buildinfo  configuration.html  contributing.html  customization.html  description.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js  testing.html  usage.html
docs/_build/html/_sources/: description.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
project/: settings.py  urls.py
