[metadata]
name = adminxperience
version = 0.1
author = PV Anfas
author_email = adminxperience@pvanfas.com
description = A Django admin redesign package for improved user experience and productivity.
long_description = file: README.rst
url = https://github.com/pvanfas/adminxperience/
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    Django>=3.0

[options.packages.find]
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-django

[options.package_data]
* = *.html, *.css, *.js

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git, __pycache__, build, dist

[isort]
profile = black
line_length = 88
known_first_party = adminxperience
skip = migrations